--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 [tool.pixi.tasks]
 
 [tool.pixi.dependencies]
-pytask = ">=0.5.0"
+pytask = ">=0.5.2,<0.6"
+pytask-latex = ">=0.4.2,<0.5"
 
 [tool.pixi.pypi-dependencies]
 "econ_spec_jel" = { path = ".", editable = true }
