--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "econ_spec_jel"
+name = "econ-spec-jel"
 version = "0.1.0"
 description = "A project to understand the specialization trends in economics research using JEL codes."
 requires-python = ">=3.9"
@@ -16,6 +16,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
 ]
+dependencies = ["pdbp>=1.6.1,<2"]
 
 [project.readme]
 file = "README.md"
@@ -41,8 +42,11 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 [tool.pixi.tasks]
 
 [tool.pixi.dependencies]
-pytask = ">=0.5.2,<0.6"
 pytask-latex = ">=0.4.2,<0.5"
+pandas = ">=2.2.3,<3"
+python = "3.10.*"
+pathlib = ">=1.0.1,<2"
+pytask = ">=0.5.2,<0.6"
 
 [tool.pixi.pypi-dependencies]
 "econ_spec_jel" = { path = ".", editable = true }
@@ -105,7 +109,10 @@ ignore_errors = true
 disallow_untyped_defs = false
 
 [tool.pytask.ini_options]
-paths = ["src/econ_spec_jel"]
+paths = ["./src/econ_spec_jel", "./documents"]
+pdbcls = "pdbp:Pdb"
+editor_url_scheme = "vscode"
+task_files = ["task_*.py", "task.py", "tasks.py"]
 
 [tool.ruff]
 target-version = "py311"
