--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,17 +1,14 @@
+---
 version: 2
-
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.10"
-
+    python: '3.10'
 sphinx:
   configuration: docs/source/conf.py
   fail_on_warning: true
-
 python:
   install:
-  - method: pip
-    path: .
-    extra_requirements:
-     - docs
+    - method: pip
+      path: .
+      extra_requirements: [docs]
