--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ select = ["ALL"]
 "docs/source/conf.py" = ["INP001"]
 "src/econ_spec_jel/data_scraping/task.py" = ["PLR2004"]
 "src/econ_spec_jel/data_preparation/task.py" = ["SLF001", "PLR2004"]
+"src/econ_spec_jel/data_analysis/task_preparation.py" = ["PLR2004"]
 "src/econ_spec_jel/config.py" = ["FBT003"]
 
 [tool.ruff.lint.isort]
