Refactor author trend calculations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ regex = ">=2024.11.6,<2025"
 requests = ">=2.32.3,<3"
 orca = ">=1.8,<2"
 python-kaleido = ">=0.2.1,<0.3"
+networkx = ">=3.4.2,<4"
 
 [tool.pixi.pypi-dependencies]
 "econ_spec_jel" = { path = ".", editable = true }
