--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,6 +149,7 @@ select = ["ALL"]
 "tests/*" = ["D", "ANN", "S101"]
 "docs/source/conf.py" = ["INP001"]
 "src/econ_spec_jel/data_management/task_merge.py" = ["SLF001"]
+"src/econ_spec_jel/analysis/task_plotting.py" = ["ANN001"]
 
 "src/econ_spec_jel/config.py" = ["FBT003"]
 
