Pytask mark skip tasks for reproducing based on merged data from bld.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,3 +168,4 @@ convention = "numpy"
 addopts = ["--doctest-modules"]
 testpaths = ["src", "tests"]
 norecursedirs = [".idea", ".tox"]
+infer_latex_dependencies = true
