--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,7 +153,9 @@ select = ["ALL"]
 "tests/*" = ["D", "ANN", "S101"]
 "docs/source/conf.py" = ["INP001"]
 "src/econ_spec_jel/data_management/task_merge.py" = ["SLF001", "S301"]
+"src/econ_spec_jel/data_management/task_topics_preparation.py" = ["N806"]
 "src/econ_spec_jel/analysis/task_plotting.py" = ["ANN001"]
+"src/econ_spec_jel/analysis/task_descriptive_plots.py" = ["ANN001"]
 "src/econ_spec_jel/text_model/task_model.py" = ["PLR0913"]
 
 "src/econ_spec_jel/config.py" = ["FBT003"]
